add megaraid_sm::lsiget class to install the `lsiget` utility

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,5 @@
 fixtures:
+  repositories:
+    "wget": "git://github.com/maestrodev/puppet-wget.git"
   symlinks:
     "megaraid_sm": "#{source_dir}"
