rename module from megaraid_sm -> megaraid

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,4 @@ fixtures:
   repositories:
     "wget": "git://github.com/maestrodev/puppet-wget.git"
   symlinks:
-    "megaraid_sm": "#{source_dir}"
+    "megaraid": "#{source_dir}"
